# swagger-output.json
@@ -101,9 +101,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
-                  "example": "any"
-                },
                 "date": {
                   "example": "any"
                 },
@@ -117,6 +114,9 @@
                   "example": "any"
                 },
                 "notes": {
+                  "example": "any"
+                },
+                "userId": {
                   "example": "any"
                 }
               }
@@ -176,6 +176,30 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "date": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                },
+                "durationMin": {
+                  "example": "any"
+                },
+                "exercises": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -433,13 +457,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
-                  "example": "any"
-                },
                 "foodItem": {
                   "example": "any"
                 },
                 "calories": {
+                  "example": "any"
+                },
+                "proteinGrams": {
+                  "example": "any"
+                },
+                "carbsGrams": {
+                  "example": "any"
+                },
+                "fatsGrams": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "userId": {
                   "example": "any"
                 }
               }
@@ -505,11 +541,41 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "foodItem": {
+                  "example": "any"
+                },
+                "calories": {
+                  "example": "any"
+                },
+                "proteinGrams": {
+                  "example": "any"
+                },
+                "carbsGrams": {
+                  "example": "any"
+                },
+                "fatsGrams": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -577,6 +643,29 @@
           "Sleep"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "date": {
+                  "example": "any"
+                },
+                "hoursSlept": {
+                  "example": "any"
+                },
+                "sleepQuality": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -633,11 +722,35 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "date": {
+                  "example": "any"
+                },
+                "hoursSlept": {
+                  "example": "any"
+                },
+                "sleepQuality": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
